[gd_scene load_steps=7 format=3 uid="uid://bjkfknvmwe0eo"]

[ext_resource type="Script" path="res://Scene_1/Level_1.gd" id="1_4vq4c"]
[ext_resource type="PackedScene" uid="uid://icnmy38m21bg" path="res://Player/lallu.tscn" id="2_xdbrk"]
[ext_resource type="PackedScene" uid="uid://d8ag5d0jx6dj" path="res://Egg/egg.tscn" id="3_7jy0p"]
[ext_resource type="PackedScene" uid="uid://bm2ewntdv41g2" path="res://Map/base_map.tscn" id="4_0arvl"]
[ext_resource type="Texture2D" uid="uid://cwhhh83msggvj" path="res://Sprout Lands - Sprites - Basic pack/Sprout Lands - Sprites - Basic pack/Vortex/vortex.png" id="5_7esc6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x75ia"]

[node name="Level1" type="Node2D"]
script = ExtResource("1_4vq4c")

[node name="Lallu" parent="." instance=ExtResource("2_xdbrk")]
position = Vector2(68, 189)

[node name="Egg" parent="." instance=ExtResource("3_7jy0p")]
position = Vector2(270, 182)

[node name="close_map" parent="." instance=ExtResource("4_0arvl")]
layer_1/tile_data = PackedInt32Array(0, 65536, 0, 65536, 0, 1, 131072, 0, 1, 196608, 0, 1, 262144, 0, 1, 327680, 0, 1, 393216, 0, 1, 458752, 0, 1, 524288, 0, 1, 589824, 0, 1, 655360, 0, 1, 720896, 0, 1, 786432, 0, 1, 851968, 0, 1, 917504, 0, 1, 983040, 0, 1, 1114112, 0, 1, 1179648, 0, 1, 1245184, 0, 1, 1310720, 0, 1, 1376256, 0, 1, 1441792, 65536, 2, 65568, 0, 1, 131104, 0, 1, 196640, 0, 1, 262176, 0, 1, 327712, 0, 1, 393248, 0, 1, 458784, 0, 1, 524320, 0, 1, 589856, 0, 1, 655392, 0, 1, 720928, 0, 1, 786464, 0, 1, 852000, 0, 1, 917536, 0, 1, 983072, 0, 1, 1376288, 0, 1, 32, 196608, 0, 1441824, 196608, 2, 1441793, 131072, 3, 1441794, 131072, 3, 1441795, 131072, 3, 1441796, 131072, 3, 1441797, 131072, 3, 1441798, 131072, 3, 1441799, 131072, 3, 1441800, 131072, 3, 1441801, 131072, 3, 1441802, 131072, 3, 1441803, 131072, 3, 1441804, 131072, 3, 1441806, 131072, 3, 1441807, 131072, 3, 1441808, 131072, 3, 1441809, 131072, 3, 1441810, 131072, 3, 1441811, 131072, 3, 1441812, 131072, 3, 1441813, 131072, 3, 1441814, 131072, 3, 1441815, 131072, 3, 1441816, 131072, 3, 1441817, 131072, 3, 1441818, 131072, 3, 1441819, 131072, 3, 1441820, 131072, 3, 1441821, 131072, 3, 1441822, 131072, 3, 1441823, 131072, 3, 1, 131072, 3, 2, 131072, 3, 3, 131072, 3, 4, 131072, 3, 5, 131072, 3, 6, 131072, 3, 7, 131072, 3, 9, 131072, 3, 10, 131072, 3, 11, 131072, 3, 12, 131072, 3, 13, 131072, 3, 14, 131072, 3, 15, 131072, 3, 16, 131072, 3, 17, 131072, 3, 19, 131072, 3, 20, 131072, 3, 21, 131072, 3, 22, 131072, 3, 23, 131072, 3, 24, 131072, 3, 25, 131072, 3, 26, 131072, 3, 27, 131072, 3, 28, 131072, 3, 29, 131072, 3, 30, 131072, 3, 31, 131072, 3, 1048576, 0, 1, 1441805, 131072, 3, 8, 131072, 3, 18, 131072, 3, 1048608, 0, 1, 1114144, 0, 1, 1179680, 0, 1, 1245216, 0, 1, 1310752, 0, 1)

[node name="open_map" parent="." instance=ExtResource("4_0arvl")]

[node name="finish" type="Area2D" parent="open_map"]
position = Vector2(560, 304)

[node name="CollisionShape2D" type="CollisionShape2D" parent="open_map/finish"]
scale = Vector2(0.411, 0.411)
shape = SubResource("CircleShape2D_x75ia")

[node name="vortex" type="Area2D" parent="open_map"]
position = Vector2(560, 304)

[node name="Vortex" type="Sprite2D" parent="open_map/vortex"]
z_index = 1
scale = Vector2(0.084, 0.084)
texture = ExtResource("5_7esc6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="open_map/vortex"]
scale = Vector2(4.021, 4.021)
shape = SubResource("CircleShape2D_x75ia")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(273, 186)
zoom = Vector2(1.5, 1.5)

[connection signal="body_entered" from="Egg" to="." method="_on_egg_body_entered"]
[connection signal="body_exited" from="Egg" to="." method="_on_egg_body_exited"]
[connection signal="body_entered" from="open_map/finish" to="." method="_on_finish_body_entered"]
[connection signal="body_entered" from="open_map/vortex" to="." method="_on_vortex_body_entered"]
[connection signal="body_exited" from="open_map/vortex" to="." method="_on_vortex_body_exited"]
